# cleo-resource-manager

./: .gitignore  README.md  config.json  pyproject.toml  pytest.ini
.ignorely/: .includes
.resource-manager/: config.json
.runsh/cache/github_crimson206_my-scripts_main_scripts_temp/: .metadata
schemas/: config.schema.json
src/cleo_resource_manager/: application.py
src/cleo_resource_manager/cli/: application.py
src/cleo_resource_manager/cli/commands/: config_command.py  get_command.py
src/cleo_resource_manager/core/: config.py  providers.py
src/resource_manager/cli/: application.py
src/resource_manager/cli/commands/: config_command.py  download_command.py  status_command.py
src/resource_manager/core/: config.py  provider_base.py  provider_getter.py  providers.py
src/resource_manager/core/providers/github/: core.py
src/resource_manager/providers/: local.py
src/resource_manager/providers/github/: core.py  github_auth.py
src/resource_manager/utils/: github_auth.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/core/: test_config.py  test_providers.py
tests/environment/result_outputs/: config.json  config_empty_result.json
tests/environment/sample_outputs/: config_empty.json  config_with_github.json  config_with_local.json  config_with_multiple_providers.json
tests/environment/sample_outputs/remote_resource/nested_folder/: test_file3.txt
tests/utils/: test_github_auth.py
