[project]
name = "cleo-resource-manager"
version = "0.1.0"
description = "Resource manager for managing and caching resources from various providers"
authors = [
    {name = "Sisung Kim", email = "sisung.kim1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cleo (>=2.1.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"

]

[project.scripts]
resource-manager = "cleo_resource_manager.cli.application:main"
