[project]
name = "resource-manager"
version = "1.0.0"
description = "Resource manager for managing and caching resources from various providers"
authors = [
    {name = "Sisung Kim", email = "sisung.kim1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cleo (>=2.1.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[project.scripts]
resource-manager = "resource_manager.cli.application:main"
